--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container-fluid">
       <div class="jumbotron-fluid">
           <div class="overlay">
-              <img src="./static/assets/logo/logo.png" alt="logo" class="mx-auto d-block">
-              <h1 class="text-white text-center welcome h-text">Welcome</h1>
-              <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
+              <img src="./static/assets/logo/logo.png" alt="logo" class="mx-auto d-block"><br><br>
+              <h1 class="text-white text-center welcome h-text">WELCOME</h1><br>
+              <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1><br>
               <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
                   ENVIRONMENT</h6>
               <a href="#about"><img src="./static/assets/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
@@ -31,102 +31,106 @@
     </div>
     <div class="services">
         <div class="services-overlay">
+          <br>
             <h1 class="text-center text-white">SERVICES</h1><br><br>
             <p class="text-center text-white">Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.<br>The outcome of this scoping
                 session is a  proposal or high level statement of work.<br>Based on your requirements, we can provide a
                 complete offering or just the pieces you need.</p>
         </div>
     </div>
-    <div class="what-we-do text-center">
-        <h1 class="text-center">WHAT WE DO</h1><br><br>
-        <div class="col-md-12">
+    <br><br>
+      <h1 class="text-center">WHAT WE DO</h1>
+        <div class="row">
+          <div class="col-md-4" id="design">
+            <div class="hide-design-image">
+              <img src="./static/assets/services_icons/design_icon.png" alt="Delani's design icon.">
+            </div>
+
+              <p class="des">DESIGN</p>
+              <p class="hide" id="design-showing">
+                  Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+          </div>
+          <div class="col-md-4" id="development">
+            <div class="hide-development-image">
+                <img src="./static/assets/services_icons/dev_icon.png" alt="Delani's dev. icon.">
+            </div>
+              <p class="dev">DEVELOPMENT</p>
+              <p class="hide" id="development-showing">
+                  All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                  They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
+          <div class="col-md-4" id="productManagement">
+            <div class="hide-product-management">
+                <img src="./static/assets/services_icons/product_icon.png" alt="Delani's product.">
+            </div>
+              <p class="pro">PRODUCT MANAGEMENT</p>
+              <p class="hide" id="product-management-showing">
+                    Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
+                    This iterative process allows for changes as business requirements evolve.</p>
+          </div>
+        </div>
+    </div>
+    <br><br>
+    <div class="container-fluid">
+        <h1 class="text-center">PORTFOLIO</h1><br>
+        <div class="col-md-12 mx-auto">
             <div class="row">
-                <figure class="col-md-4" "text-center">
-                    <img src="./static/assets/services_icons/design_icon.png" alt="services-icons" class="service-icons des">
-                    <figcaption id="dicon">DESIGN</figcaption>
-                    <br>
-                    <p id="dtxt">Our design practice offers a full range of services including brand strategy,
-                        interaction and
-                        visual design and user experience testing.
-                        Throughout your project, our designers create and implement visual design and workflows, solicit
-                        user feedback and work with you to make sure what gets built is what is needed.</p>
-                </figure>
-                <figure class="col-md-4" "text-center">
-                    <img src="./static/assets/services_icons/dev_icon.png" alt="services-icons" class="service-icons dev">
-                    <figcaption id="devicon">DEVELOPMENT</figcaption>
-                    <br>
-                    <p id="devtxt">All engineers are fluent in the latest enterprise, mobile and web development
-                        technologies.
-                        They collaborate with your team to write, and improve code on a daily basis, using proven
-                        practices such as test-driven development and pair programming.</p>
-                </figure>
-                <figure class="col-md-4">
-                    <img src="./static/assets/services_icons/product_icon.png" alt="services-icons" class="service-icons pro">
-                    <figcaption id="proicon">PRODUCT DESIGN</figcaption>
-                    <br>
-                    <p id="protxt">Planning and development is iterative. Because we are constantly coding and testing,
-                        the products
-                        we build are always ready to go live.
-                        This iterative process allows for changes as business requirements evolve.</p>
-                </figure>
-            </div>
-        </div>
-    </div>
-    <div class=" container-fluid">
-        <h1 class="text-center">PORTFOLIO</h1>
-        <div class="card-deck text-center">
-            <div class="card">
-                <img src="./static/assets/portfolio/work4.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
+                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                      <img src="./static/assets/portfolio/work4.jpg" alt="Design Kenya image" width="100%">
+                    <div class="Hover">
+                      <p id=Hover_designKenya>Delani Portfolio</p>
+                    </div>
+                  </div>
+                  <div class=" col-md-2">
+                      <img src="./static/assets/portfolio/work3.jpg" alt="Ontario Security image" width="100%">
+                    <div class="Hover">
+                      <p id=Hover_designKenya>Delani Portfolio</p>
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                      <img src="./static/assets/portfolio/work2.jpg" alt="Design image" width="100%">
+                    <div class="Hover">
+                      <p id=Hover_designKenya>Delani Portfolio</p>
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                       <img src="./static/assets/portfolio/work1.jpg" alt="Design Kenya image" width="100%">
+                      <div class="Hover">
+                        <p id=Hover_designKenya>Delani Portfolio</p>
+                      </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="./static/assets/portfolio/work3.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
+                <br>
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">
+                      <img src="./static/assets/portfolio/work5.jpg" alt="Let's chat image" width="100%">
+                    <div class="Hover">
+                        <p id=Hover_designKenya>Lets Chat</p>
+                    </div>
+                  </div>
+                  <div class= "col-md-2">
+                      <img src="./static/assets/portfolio/work6.jpg" alt="Mobile App buttons image" width="100%">
+                    <div class="Hover">
+                      <p id=Hover_designKenya>Mobile App buttons</p>
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                      <img src="./static/assets/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
+                    <div class="Hover">
+                      <p id=Hover_designKenya>Mock-up Kenya_burned logo</p>
+                    </div>
+                  </div>
+                  <div class="col-md-2>
+                      <img src="./static/assets/portfolio/work8.jpg" alt="Mock-up Kenya_burned logo" width="100%">
+                    <div class="Hover">
+                      <p id="Hover_designKenya">Giraffe restaurant</p>
+                    </div>
+                  </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="./static/assets/portfolio/work2.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio<br>Kenya</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./static/assets/portfolio/work1.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-deck text-center">
-            <div class="card">
-                <img src="./static/assets/portfolio/work5.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./static/assets/portfolio/work6.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./static/assets/portfolio/work7.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
-                </div>
-            </div>
-            <div class="card">.
-                <img src="./static/assets/portfolio/work8.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
-                </div>
-            </div>
-        </div>
-    </div>
+              </div>
     <div class="contacts">
         <div class="contact-overlay">
             <h1 class="text-center text-white b-text">CONTACT US</h1><br>
@@ -170,8 +174,8 @@
     <br>
     <footer class="text-center">Delani Studio <br> 2020</footer
 </div>
-</body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.ajaxchimp.js"></script>
 <script src="js/script.js"></script>
+</body>
 </html>
